force-app/main/default/objects/FNS_FFDCSFDCSetup__c/FNS_FFDCSFDCSetup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FFDC-SFDC Setup</label>
</CustomObject>