force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_AccessToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessToken__c</fullName>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>