force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_AccessTokenURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessTokenURL__c</fullName>
    <label>Access Token URL</label>
    <type>Url</type>
</CustomField>