force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConsumerKey__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>