force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_IsFirstTimeUpdatingPicklist__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsFirstTimeUpdatingPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstTimeUpdatingPicklist</label>
    <type>Checkbox</type>
</CustomField>