force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_MiddlewareInstanceURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_MiddlewareInstanceURL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>