force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_OrganisationId__c.field-meta.xml
<CustomField>
    <fullName>FNS_OrganisationId__c</fullName>
    <label>Organisation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>