force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>FNS_RedirectURI__c</fullName>
    <label>Redirect URI</label>
    <type>Url</type>
</CustomField>