force-app/main/default/objects/FNS_FFDCSFDCSetup__c/fields/FNS_RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>