force-app/main/default/objects/FNS_FFDCSFDCSetup__c/listViews/Admin_VIew.listView-meta.xml
<ListView>
    <fullName>Admin_VIew</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>FNS_ConnectionName__c</columns>
    <columns>FNS_ConsumerKey__c</columns>
    <columns>FNS_ConsumerSecret__c</columns>
    <columns>FNS_MiddlewareInstanceURL__c</columns>
    <columns>FNS_RefreshToken__c</columns>
    <columns>FNS_AccessToken__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Admin View</label>
    <language>en_US</language>
</ListView>